<resources>
    <string name="app_name">VirtualSoftKeys</string>

    <!--Permission Dialog-->
    <string name="dialog_permissions_title">Permissions</string>

    <string name="dialog_permissions_content">This app requires some permissions to function properly</string>

    <string name="dialog_permission_draw_title">1. Draw over other Apps</string>

    <string name="dialog_permission_draw_content">The app needs to draw over other apps. The image below shows how you can turn it on. The button below will take you to the settings page. Furthermore, you can find these settings in \nSettings > Apps > Advanced > Draw over other apps</string>

    <string name="dialog_permission_accessibility_title">2. Accessibility service</string>

    <string name="dialog_permission_accessibility_content">You need to enable the Accessibility service for this app. The image below shows how you can turn it on. The button below will take you to the settings page. Furthermore, you can find these settings in \nSettings > Accessibility > VirtualSoftKeys</string>

    <string name="Permission_goto_page">Go to Settings</string>

    <string name="Permission_allow_system_alert_first">Please allow above permission first</string>

    <string name="Permission_allowed">Permission Granted</string>

    <string name="Permission_allow_system_alert_first_and_restart_service">"Please allow this permission first, and select VirtualSoftKeys in accessibility"</string>


    <!--Accessibility setting-->
    <string name="accessibility_settings_content">Turn VirtualSoftKey\'s service on or off, Remember if the service is off you cannot use Soft Key Bar in your app.\n Remember, We care about users privacy and do not collect any data from users, this is an open source project and you can find the URL for the project on the main page.</string>

    <!--main activity-->
    <string name="setting_gesture_height_title">Gesture height:</string>

    <string name="setting_gesture_height_content">Move slider to increase\\decrease the height of touch area, touching that area will make the navigation bar visible</string>

    <string name="setting_stylus_mode_title">Stylus mode:</string>

    <string name="setting_stylus_mode_content">If your phone supports stylus, You can select this mode and use stylus to activate the navigation bar</string>

    <string name="setting_stylus_mode_button">Stylus mode</string>

</resources>
